git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13057 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 5e0ff2627b41728bf33dfd87196fdb18f912f986

--- a/hudson_jobs/provision_eclipse_helios_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_helios_bases_for_kermeta/build.xml
@@ -197,11 +197,11 @@
 			<fileset dir="${env.WORKSPACE}/build/dropins"></fileset>
 		</copy>
 
-		<delete file="${env.WORKSPACE}/build/kermeta_helios_${eclipse.version.name}_base.zip" failonerror="false"/>
+		<delete file="${env.WORKSPACE}/build/kermeta_helios_${eclipse.version.name}_base.${archive.extension}" failonerror="false"/>
 		<antcall target="compress.${archive.extension}"/>		
 	</target>
 	<target name="compress.tar.gz">
-			<tar dest="${env.WORKSPACE}/build/kermeta_helios_${eclipse.version.name}_base.tar.gz" compression="gzip">
+			<tar destfile="${env.WORKSPACE}/build/kermeta_helios_${eclipse.version.name}_base.tar.gz" compression="gzip">
 				<fileset dir="${env.WORKSPACE}/build/kermeta_helios_${eclipse.version.name}_base">
 				</fileset>
 			</tar>
