upgrade to helios
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13060 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 7ec43ab25afde1c48baf003b87701b0bfe98ea88

--- a/hudson_jobs/full_kermeta_studio_compile/build.xml
+++ b/hudson_jobs/full_kermeta_studio_compile/build.xml
@@ -5,15 +5,15 @@
 	
 	<property name="env.WORKSPACE" location="."/>
 	<property name="eclipse.native.version.name" value="linux_x86_64"/>
-	<property name="equinox.jar.filename" value="org.eclipse.equinox.launcher_1.0.201.R35x_v20090715.jar"/>
-	<property name="pde.build.foldername" value="org.eclipse.pde.build_3.5.2.R35x_20100114"/>
+	<property name="equinox.jar.filename" value="org.eclipse.equinox.launcher_1.1.0.v20100507.jar"/>
+	<property name="pde.build.foldername" value="org.eclipse.pde.build_3.6.1.R36x_v20100823"/>
 	
 	<property name="eclipse.workspace.dir" location="${env.WORKSPACE}/eclipseworkspace"/>	
 	<property name="eclipse.build.dir" location="."/>
 	<property name="eclipse.build.scripts.dir" location="./eclipse_build_scripts"/>
 	
 	<property name="studio.base.dir" location="${env.WORKSPACE}/studiobase/"/>
-	<property name="studio.base.url" value="http://tipimouss.irisa.fr:8090/job/provision_eclipse_bases_for_kermeta/lastSuccessfulBuild/artifact/provision_eclipse_bases_for_kermeta/build/kermeta_linux_x86_64_base.zip"/>
+	<property name="studio.base.url" value="http://tipimouss.irisa.fr:8090/job/provision_eclipse_helios_bases_for_kermeta/lastSuccessfulBuild/artifact/provision_eclipse_helios_bases_for_kermeta/build/kermeta_linux_x86_64_base.zip"/>
 	<property name="eclipse.bin.home" location="${studio.base.dir}/eclipse"/>
 	
 	<target name="all" depends="get_studio_base, compile">
