git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13062 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 1a8320466391045a5b45079f13a1a95aae1f1d8a

--- a/hudson_jobs/full_kermeta_studio_compile/build.xml
+++ b/hudson_jobs/full_kermeta_studio_compile/build.xml
@@ -13,7 +13,8 @@
 	<property name="eclipse.build.scripts.dir" location="./eclipse_build_scripts"/>
 	
 	<property name="studio.base.dir" location="${env.WORKSPACE}/studiobase/"/>
-	<property name="studio.base.url" value="http://tipimouss.irisa.fr:8090/job/provision_eclipse_helios_bases_for_kermeta/lastSuccessfulBuild/artifact/provision_eclipse_helios_bases_for_kermeta/build/kermeta_linux_x86_64_base.zip"/>
+	<property name="studio.base.url" value="http://tipimouss.irisa.fr:8090/job/provision_eclipse_helios_bases_for_kermeta/lastSuccessfulBuild/artifact/provision_eclipse_helios_bases_for_kermeta/build/kermeta_linux_x86_64_base.tar.gz"/>
+	<property name="studio.archive.extension" value="tar.gz"/>
 	<property name="eclipse.bin.home" location="${studio.base.dir}/eclipse"/>
 	
 	<target name="all" depends="get_studio_base, compile">
@@ -23,6 +24,7 @@
 	<target name="get_studio_base">
 		<ant antfile="get_studio_base_build.xml">
   			<property name="studio.base.url" value="${studio.base.url}"/>
+  			<property name="archive.extension" value="${studio.archive.extension}"/>
 			<property name="studio.base.dir" location="${env.WORKSPACE}/studiobase/"/>
 		</ant>
 	</target>
