moving to eclipse helios
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13072 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 6a3224f5ff120ed9bb0a78a298e0db3eab7d458a

--- a/hudson_jobs/full_kermeta_studio_compile/build.xml
+++ b/hudson_jobs/full_kermeta_studio_compile/build.xml
@@ -25,7 +25,7 @@
 		<ant antfile="get_studio_base_build.xml">
   			<property name="studio.base.url" value="${studio.base.url}"/>
   			<property name="archive.extension" value="${studio.archive.extension}"/>
-			<property name="studio.base.dir" location="${env.WORKSPACE}/studiobase/"/>
+			<property name="studio.base.dir" location="${studio.base.dir}"/>
 		</ant>
 	</target>
 
