Update Default location policy
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13089 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 7a13d89790f635f23c7c7a0a0d0d2c7f01a91de9

--- a/art2_projects/org.kermeta.art2.framework.bus.jmdns/pom.xml
+++ b/art2_projects/org.kermeta.art2.framework.bus.jmdns/pom.xml
@@ -26,7 +26,7 @@
                         <Import-Package>!org.junit.*,!org.kermeta.art2.framework.bus.jmdns.*,!junit.*,!org.easymock.*,org.slf4j.*;version="${slf4j.version.range}",*</Import-Package>
                         <Private-Package>org.kermeta.art2.framework.bus.jmdns.*,javax.jmdns.*</Private-Package>
                         <Dynamic-ImportPackage>*</Dynamic-ImportPackage>
-                        <Export-Package></Export-Package>
+                        <Export-Package>javax.jmdns.*</Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
