--- a/kmlogo_projects/org.kermeta.kmlogo.logoasm.tutorial.ui/plugin.xml
+++ b/kmlogo_projects/org.kermeta.kmlogo.logoasm.tutorial.ui/plugin.xml
@@ -46,7 +46,7 @@
            hasPages="false"
            icon="icons/logo.gif"
            id="org.kermeta.kmlogo.logoasm.tutorial.ui.wizards.KmLogoTutorialWizard"
-           name="Kermeta 2 Logo tuto">
+           name="Logo tutorial - base resources">
      </wizard>
      <wizard
            canFinishEarly="true"
@@ -55,7 +55,7 @@
            hasPages="false"
            icon="icons/logoSoluce.gif"
            id="org.kermeta.kmlogo.logoasm.tutorial.ui.wizards.KmLogoTutorialWizardSoluce"
-           name="Kermeta 2 Logo tuto (solution)">
+           name="Logo tutorial - solution">
      </wizard>
   </extension>
 </plugin>
