use same naming convention for the wizard as for the logo tutorial
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13116 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 6752fa5d28998ad6bc816f48992701919d707c94

--- a/samples.fsm_projects/fr.irisa.triskell.kermeta.samples.fsm/plugin.xml
+++ b/samples.fsm_projects/fr.irisa.triskell.kermeta.samples.fsm/plugin.xml
@@ -17,7 +17,7 @@
             hasPages="false"
             icon="icons/FSM.gif"
             id="fr.irisa.triskell.kermeta.samples.fsm.wizard"
-            name="FSM tutorial Demo"
+            name="FSM tutorial - base resources"
             preferredPerspectives="org.eclipse.ui.resourcePerspective"/>
    </extension>
    <extension
@@ -32,8 +32,7 @@
             hasPages="false"
             icon="icons/FSM.gif"
             id="fr.irisa.triskell.kermeta.samples.fsm.wizard2"
-            name="FSM Solutions">
-      </wizard>
+            name="FSM tutorial - solution"></wizard>
       <category
             id="fr.irisa.triskell.kermeta.samples.fsm.category2"
             name="Kermeta FSM solutions"
