Update Default location policy
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@13117 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: a81bcb616d6e5a79bd4e7dd2b7f5f406b49d699e

--- a/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
+++ b/art2_projects/org.kermeta.art2.artcomponent.root/pom.xml
@@ -11,7 +11,12 @@
         <groupId>org.kermeta.art2</groupId>
         <version>2.2.1-SNAPSHOT</version>
     </parent>
-    
+
+
+    <properties>
+        <maven.build.timestamp.format>yyyyMMddHHmmSSS</maven.build.timestamp.format>
+    </properties>
+
     <build>
         <plugins>
             <!-- APT ART2 PLUGIN : ART2 JAVA ANNOTATION INTEGRATION -->
@@ -28,6 +33,7 @@
                         <value>art2.lib.group=${project.groupId}</value>
                         <value>art2.lib.version=${project.version}</value>
                         <value>art2.lib.target=${basedir}/src/main/resources/ART2-INF/art2Lib.art2</value>
+                        <value>tag=${maven.build.timestamp}</value>
                     </options>
                 </configuration>
                 <executions>
