--- a/art2_projects/org.kermeta.art2.platform.netbinox/nbproject/platform.properties
+++ b/art2_projects/org.kermeta.art2.platform.netbinox/nbproject/platform.properties
@@ -1,5 +1,21 @@
 # 
 cluster.path.extra=netbinox
+cluster.path.with.disabled.clusters=\
+    ${nbplatform.active.dir}/apisupport:\
+    ${nbplatform.active.dir}/harness:\
+    ${nbplatform.active.dir}/ide:\
+    ${nbplatform.active.dir}/java:\
+    ${nbplatform.active.dir}/nb:\
+    ${nbplatform.active.dir}/platform:\
+    ${nbplatform.active.dir}/websvccommon:\
+    netbinox:\
+    ../org.kermeta.art2.platform.standalone/target:\
+    ../../KermetaV2/org.kermeta.traceability.model/target:\
+    ../../KermetaV2/org.kermeta.kp.model/target:\
+    ../../KermetaV2/org.kermeta.language.model/target:\
+    ../org.kermeta.art2.platform.standalone/target/art2Bundles:\
+    ../../KermetaV2/org.kermeta.language.api/target:\
+    ../../KermetaV2/org.kermeta.language.loader.scalaKMT/target
 disabled.modules.extra=org.netbeans.libs.felix
 # 
 
@@ -30,6 +46,28 @@ disabled.modules=\
     org.netbeans.modules.websvc.saas.ui,\
     org.openide.compat,\
     org.openide.util.enumerations
+extcluster.../../KermetaV2/org.kermeta.editor.netbeans/target.javadoc=
+extcluster.../../KermetaV2/org.kermeta.editor.netbeans/target.sources=
+extcluster.../../KermetaV2/org.kermeta.kp.model/target.javadoc=
+extcluster.../../KermetaV2/org.kermeta.kp.model/target.sources=
+extcluster.../../KermetaV2/org.kermeta.language.api/target.javadoc=
+extcluster.../../KermetaV2/org.kermeta.language.api/target.sources=
+extcluster.../../KermetaV2/org.kermeta.language.loader.scalaKMT/target.javadoc=
+extcluster.../../KermetaV2/org.kermeta.language.loader.scalaKMT/target.sources=
+extcluster.../../KermetaV2/org.kermeta.language.model/target.javadoc=
+extcluster.../../KermetaV2/org.kermeta.language.model/target.sources=
+extcluster.../../KermetaV2/org.kermeta.traceability.model/target.javadoc=
+extcluster.../../KermetaV2/org.kermeta.traceability.model/target.sources=
+extcluster.../org.kermeta.art2.adaptation.model/target.javadoc=
+extcluster.../org.kermeta.art2.adaptation.model/target.sources=
+extcluster.../org.kermeta.art2.api/target.javadoc=
+extcluster.../org.kermeta.art2.api/target.sources=
+extcluster.../org.kermeta.art2.framework/target.javadoc=
+extcluster.../org.kermeta.art2.framework/target.sources=
+extcluster.../org.kermeta.art2.model/target.javadoc=
+extcluster.../org.kermeta.art2.model/target.sources=
 extcluster.../org.kermeta.art2.platform.standalone/target.javadoc=
 extcluster.../org.kermeta.art2.platform.standalone/target.sources=
+extcluster.../org.kermeta.art2.platform.standalone/target/art2Bundles.javadoc=
+extcluster.../org.kermeta.art2.platform.standalone/target/art2Bundles.sources=
 nbplatform.active=default
